# real_webview

./: .metadata  ADVANCED_FEATURES.md  AUTO_DRM_GUIDE.md  CHANGELOG.md  DESKTOP_IMPLEMENTATION_STATUS.md  MIGRATION_COMPLETE.md  MIGRATION_FROM_INAPPWEBVIEW.md  NATIVE_IMPLEMENTATION_GUIDE.md  NEW_FEATURES_IMPLEMENTED.md  PLATFORM_SETUP.md  PLATFORM_STATUS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RESEARCH_SUMMARY.md  WINDOWS_BUILD_FIX.md  pubspec.yaml
android/: build.gradle  settings.gradle
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: example_migration.dart  main.dart  streaming_demo.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: real_webview.podspec
ios/Classes/: DRMMediaHandler.swift  FLNativeView.swift  RealCookieManager.swift  RealWebviewPlugin.swift
lib/: real_webview.dart  real_webview_method_channel.dart  real_webview_platform_interface.dart  real_webview_web.dart
lib/src/: pull_to_refresh_controller.dart  real_webview_controller.dart  real_webview_stub.dart  real_webview_web.dart  (+1 more)
linux/: CMakeLists.txt  platform_view_factory.cc  real_webview_plugin.cc  real_webview_plugin_private.h  webkit_manager.cc
linux/include/real_webview/: platform_view_factory.h  real_webview_plugin.h  webkit_manager.h
linux/test/: real_webview_plugin_test.cc
macos/: real_webview.podspec
test/: real_webview_method_channel_test.dart  real_webview_test.dart
windows/: CMakeLists.txt  real_webview_plugin.cpp  real_webview_plugin.h  real_webview_plugin_c_api.cpp  webview2_manager.cpp
windows/include/real_webview/: real_webview_plugin.h  real_webview_plugin_c_api.h  webview2_manager.h
windows/test/: real_webview_plugin_test.cpp
(+37 files in other folders)
